CREATE TABLE admins (
		id VARCHAR(36) PRIMARY KEY, -- UUID format
		email VARCHAR(100) NOT NULL UNIQUE,
		full_name VARCHAR(255) NOT NULL,
		password VARCHAR(255) NOT NULL,
		role INT NOT NULL,
		hospital_id INT NOT NULL REFERENCES hospitals(id) ON DELETE CASCADE,
		created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
		updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TRIGGER update_admin_timestamp
BEFORE UPDATE ON admins
FOR EACH ROW
EXECUTE FUNCTION update_timestamp();
