CREATE TABLE messages (
	id VARCHAR(36) PRIMARY KEY,
	channel_id VARCHAR(36) NOT NULL REFERENCES channels(id) ON DELETE CASCADE,
	content TEXT NOT NULL,
	role INT NOT NULL,
	created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
	updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TRIGGER update_messages_timestamp
BEFORE UPDATE ON messages
FOR EACH ROW
EXECUTE FUNCTION update_timestamp();
