Table "admins" {
  "id" varchar(36) [pk, not null]
  "email" varchar(100) [unique, not null]
  "full_name" varchar(255) [not null]
  "password" varchar(255) [not null]
  "role" int4 [not null]
  "hospital_id" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "channels" {
  "id" varchar(36) [pk, not null]
  "name" varchar(255) [not null]
  "doctor_id" varchar(36) [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "doctor_appointments" {
  "id" varchar(26) [pk, not null]
  "doctor_id" varchar(36) [not null]
  "patient_id" varchar(36) [not null]
  "appointment_date" date [not null]
  "start_time" time [not null]
  "end_time" time [not null]
  "type" int4 [not null]
  "status" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (doctor_id, appointment_date, start_time, end_time) [type: btree, name: "idx_doctor_appointments_unique"]
  }
}

Table "doctor_schedules" {
  "id" int4 [pk, not null, increment]
  "doctor_id" varchar(36) [not null]
  "day_of_week" int4 [not null]
  "start_time" time [not null]
  "end_time" time [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "doctors" {
  "id" varchar(36) [pk, not null]
  "full_name" varchar(255) [not null]
  "email" varchar(100) [unique, not null]
  "phone_number" varchar(20)
  "specialty" int4 [not null]
  "hospital_id" int4 [not null]
  "password" varchar(255) [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "hospital_partners" {
  "id" varchar(26) [pk, not null]
  "from_hospital_id" int4 [not null]
  "to_hospital_id" int4 [not null]
  "partner_type" int4 [not null, default: 1]
  "status" int4 [not null, default: 1]
  "reason" text
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]

  Indexes {
    (from_hospital_id, to_hospital_id, partner_type) [type: btree, name: "idx_hospital_partners_unique"]
  }
}

Table "hospitals" {
  "id" int4 [pk, not null, increment]
  "name" varchar(255) [not null]
  "address" text [not null]
  "phone" varchar(20)
  "email" varchar(100)
  "website" varchar(255)
  "type" int4 [not null, default: 1]
  "status" int4 [not null, default: 1]
  "latitude" numeric(9,6) [not null]
  "longitude" numeric(9,6) [not null]
  "year_established" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "messages" {
  "id" varchar(36) [pk, not null]
  "channel_id" varchar(36) [not null]
  "content" text [not null]
  "role" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "moods" {
  "id" int4 [pk, not null, increment]
  "doctor_id" varchar(36) [unique, not null]
  "scale" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "patients" {
  "id" varchar(36) [pk, not null]
  "full_name" varchar(255) [not null]
  "id_number" varchar(50) [unique, not null]
  "phone_number" varchar(20)
  "address" text [not null]
  "date_of_birth" date [not null]
  "gender" int4 [not null]
  "height" numeric(5,2) [not null]
  "weight" numeric(5,2) [not null]
  "blood_type" int4 [not null]
  "allergies" text
  "medical_record_number" varchar(50) [unique, not null]
  "hospital_id" int4 [not null]
  "created_at" timestamp [default: `CURRENT_TIMESTAMP`]
  "updated_at" timestamp [default: `CURRENT_TIMESTAMP`]
}

Table "schema_migrations" {
  "version" int8 [pk, not null]
  "dirty" bool [not null]
}

Ref "admins_hospital_id_fkey":"hospitals"."id" < "admins"."hospital_id" [delete: cascade]

Ref "channels_doctor_id_fkey":"doctors"."id" < "channels"."doctor_id" [delete: cascade]

Ref "doctor_appointments_doctor_id_fkey":"doctors"."id" < "doctor_appointments"."doctor_id" [delete: cascade]

Ref "doctor_appointments_patient_id_fkey":"patients"."id" < "doctor_appointments"."patient_id" [delete: cascade]

Ref "doctor_schedules_doctor_id_fkey":"doctors"."id" < "doctor_schedules"."doctor_id" [delete: cascade]

Ref "doctors_hospital_id_fkey":"hospitals"."id" < "doctors"."hospital_id" [delete: cascade]

Ref "hospital_partners_from_hospital_id_fkey":"hospitals"."id" < "hospital_partners"."from_hospital_id" [delete: cascade]

Ref "hospital_partners_to_hospital_id_fkey":"hospitals"."id" < "hospital_partners"."to_hospital_id" [delete: cascade]

Ref "messages_channel_id_fkey":"channels"."id" < "messages"."channel_id" [delete: cascade]

Ref "moods_doctor_id_fkey":"doctors"."id" < "moods"."doctor_id" [delete: cascade]

Ref "patients_hospital_id_fkey":"hospitals"."id" < "patients"."hospital_id" [delete: cascade]
